--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.5.0",
 		"svelte": "^3.54.0",
+		"svelte-adapter-appengine": "^0.10.3",
 		"svelte-check": "^3.0.1",
 		"typescript": "^5.0.0",
 		"vite": "^4.3.0"
