--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   },
   "devDependencies": {
     "@sveltejs/adapter-auto": "^2.0.0",
+    "@sveltejs/adapter-node": "latest",
     "@sveltejs/kit": "^1.5.0",
     "svelte": "^3.54.0",
-    "@sveltejs/adapter-node": "latest",
     "svelte-check": "^3.0.1",
     "typescript": "^5.0.0",
     "vite": "^4.3.0"
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "dotenv": "^16.3.1"
+  }
 }
